[package]
name = "sponza"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9" }

bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3