[package]
name = "sponza"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9" }
image = "0.24"
anyhow = "1.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 1

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3